# routes/user.js
@@ -1,12 +1,12 @@
-const express = require('express');
-const router = express.Router();
+// const express = require('express');
+// const router = express.Router();
 
-const userController = require('../controllers/user');
+// const userController = require('../controllers/user');
 
-router.get('/', userController.getAll);
+// router.get('/', userController.getAll);
 
-router.get('/:username', userController.getUser);
+// router.get('/:username', userController.getUser);
 
-router.post('/', userController.create);
+// router.post('/', userController.create);
 
-module.exports = router;
+// module.exports = router;
