# swaggerDesign.json
@@ -81,46 +81,6 @@
               }
             }
           }
-      },
-      "/user": {
-        "post": {
-          "tags": ["user"],
-          "summary": "Create user",
-          "description": "This is for when a user creates an account.",
-          "operationId": "createUser",
-          "produces": ["application/json"],
-          "parameters": [
-            {
-              "in": "body",
-              "name": "body",
-              "description": "Created user object",
-              "required": true,
-              "schema": {
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "successfully created user",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "type": "integer",
-                    "format": "int64"
-                  },
-                  "name": {
-                    "type": "string",
-                    "example": ""
-                  }
-                }
-              }
-            },
-            "400": {
-              "description": "Invalid listItem name value"
-            }
-          }
-        }
       }
           }
         }
